Time: 1 ms (87.04%), Space: 43.6 MB (98.59%) - LeetHub